--- a/DesignPatterns/build.gradle
+++ b/DesignPatterns/build.gradle
@@ -10,4 +10,6 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
+
+    testCompile "org.mockito:mockito-core:2.+"
 }
