--- a/Workbench/build.gradle
+++ b/Workbench/build.gradle
@@ -5,7 +5,21 @@ repositories {
 }
 
 dependencies {
+
     // Retrofit & OkHttp
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+
+    // https://github.com/JavaMoney/jsr354-ri
+    compile group: 'org.javamoney', name: 'moneta', version: '1.1'
+
+    // https://github.com/junit-team/junit4
+    testCompile 'junit:junit:4.12'
+
+    // https://mvnrepository.com/artifact/org.hamcrest/hamcrest-library
+    compile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
+
 }
