--- a/Workbench/build.gradle
+++ b/Workbench/build.gradle
@@ -22,4 +22,7 @@ dependencies {
     // https://mvnrepository.com/artifact/org.hamcrest/hamcrest-library
     compile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
 
+    // https://github.com/ReactiveX/RxJava
+    compile 'io.reactivex:rxjava:1.2.9'
+
 }
