--- a/Blog/build.gradle
+++ b/Blog/build.gradle
@@ -1,4 +1,4 @@
-group 'Example'
+group 'Blog'
 version '1.0-SNAPSHOT'
 
 buildscript {
@@ -32,7 +32,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "ch.qos.logback:logback-classic:1.2.1"
     testCompile group: 'junit', name: 'junit', version: '4.12'
