--- a/Blog/src/main/resources/application.conf
+++ b/Blog/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 ktor {
     deployment {
         port = 8080
+        watch = [ "Blog" ]
     }
     application {
         modules = [ blog.BlogAppKt.main ]
